--- a/src/scss/components/_loading.scss
+++ b/src/scss/components/_loading.scss
@@ -3,7 +3,7 @@
 	top: 0;
 	width: 100%;
 	height: 100vh;
-	background: rgba($color: #000000, $alpha: 0.7);
+	background: rgba($color: #000000, $alpha: 0.85);
 	z-index: 5000;
 	display: flex;
 	align-items: center;
