--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -21,17 +21,56 @@
 	}
 
 	&__inner {
-		@include wrapper(1115, 25);
+		@include wrapper(1165, 25);
 		position: relative;
 		min-height: 650px;
 		display: flex;
+	}
+
+	&__header {
+		@include wrapper(1165, 25);
+		display: flex;
+		justify-content: space-between;
+		position: fixed;
+		top: 60px;
+		left: 50%;
+		transform: translateX(-50%);
+		display: flex;
+		width: 100%;
+		transition: 1s all;
+		align-items: center;
 
 		@include breakpoint-max(800) {
+			top: 0;
+			padding-top: 40px;
+		}
+
+		&.sticky {
+			top: 0px;
+			padding: 10px;
+			background-color: rgba($color: #000000, $alpha: 0.9);
+			z-index: 100;
+		}
+	}
+
+	&__logo {
+		z-index: 100;
+	}
+
+	&__nav {
+		@include breakpoint-max(800) {
+			position: absolute;
+			left: 0;
+			right: 0;
+			bottom: 0;
+			top: 0;
+			padding: 0;
+
 			&::before {
 				content: '';
 				position: absolute;
+				min-width: 100vh;
 				min-height: 100vh;
-				width: 100vw;
 				top: 0;
 				bottom: 0;
 				left: 0;
@@ -39,12 +78,11 @@
 				background-color: rgba($color: #000000, $alpha: 0.5);
 				opacity: 0;
 				transform: scale(0);
-				transform-origin: top;
-				transition: 0.5s all ease-in-out;
+				transform-origin: top left;
+				transition: 0.4s all ease-in-out;
 			}
 
 			&.overlay {
-				overflow-x: hidden;
 				&:before {
 					content: '';
 					position: absolute;
@@ -56,42 +94,9 @@
 					background-color: rgba($color: #000000, $alpha: 1);
 					opacity: 1;
 					transform: scale(1);
-					transform-origin: top;
+					transform-origin: top left;
 				}
 			}
-		}
-	}
-
-	&__header {
-		display: flex;
-		justify-content: space-between;
-		position: fixed;
-		top: 60px;
-		left: 50%;
-		transform: translateX(-50%);
-		display: flex;
-		width: 100%;
-		max-width: 1115px;
-		padding: 0 25px;
-		transition: 1s all;
-		align-items: center;
-
-		@include breakpoint-max(800) {
-			top: 40px;
-		}
-
-		&.sticky {
-			top: 0px;
-			padding: 10px;
-			background-color: rgba($color: #000000, $alpha: 0.8);
-		}
-	}
-
-	&__nav {
-		@include breakpoint-max(800) {
-			position: absolute;
-			left: 25px;
-			top: 50%;
 		}
 	}
 
@@ -103,18 +108,26 @@
 
 		@include breakpoint-max(800) {
 			opacity: 0;
-			left: 20px;
 			position: absolute;
+			top: 50%;
+			min-height: 100vh;
 			flex-direction: column;
-			gap: 25px;
-			top: 100px;
+			justify-content: center;
 			align-items: flex-start;
+			transform: scale(0);
+			transform-origin: top;
 
 			&.show {
 				opacity: 1;
-				left: 0;
-				top: 50vh;
-				transform: translateY(-25vh);
+				position: absolute;
+				top: 50%;
+				min-height: 100vh;
+				flex-direction: column;
+				justify-content: center;
+				align-items: flex-start;
+				padding-left: 25px;
+				transform: scale(1);
+				transform-origin: top;
 			}
 		}
 
@@ -136,7 +149,6 @@
 				width: 0%;
 				height: 2px;
 				opacity: 0;
-				-webkit-transition: 0.3s all ease-in-out;
 				transition: 0.3s all ease-in-out;
 			}
 		}
@@ -165,7 +177,7 @@
 	}
 
 	&__title {
-		@include fluid-typo(375px, 1440px, 30px, 60px);
+		@include fluid-typo(375px, 1440px, 30px, 70px);
 		text-transform: uppercase;
 		font-family: $secondaryFont;
 		font-weight: 300;
